# project-traceability

./: README.md  index.md
.github/workflows/: pull_request.yaml  push.yaml
APIs/: traceabilityAPI.json
api/: Traceability API Test Cases.postman_collection.json  openapi.json
apis/: traceabilityAPI.json
apis/sustainability-api/: openapi.json
config/: .gitignore  Pulumi.mock.yaml  __main__.py  iam.py  requirements.txt
config/scripts/: build.sh
config/sustainability-api/: Pulumi.yaml  __main__.py
config/sustainability-api/scripts/: build.sh
docs/: Draft - Verifiable Credentials for Cross Border Trade.docx  TestScenario.md
docs/blockchainPlatform/: architecture.md
docs/implementation/: guidance.md
docs/testData/: TestScenario.md  sustainabilitytrustgraph.pptx  sustainabilitytrustgraph.xlsx  ~$sustainabilitytrustgraph.xlsx
mock/: FastAPI.postman_collection.json  env-default  pyproject.toml  readme.md
mock/sampledata/: objectEvent.json
mock/src/: common.py  init_dynamodb.py  itc_api.py  models.py
mocks/sustainability-api/: .gitignore
mocks/sustainability-api/src/: itc_api.py
sustainability-api/: Dockerfile  Dockerfile-lambda  docker-compose.yml  pyproject.toml
sustainability-api/src/: common.py  itc_api.py
vocabulary/: ict_output_2022_06_14.jsonld  ict_output_2022_06_16.jsonld  itc_output.jsonld  itc_output_2022_06_08.jsonld  itc_output_2022_06_10.jsonld  sdce-vocabulary.json
